# libcardano

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  cpx-ci.yaml  justfile  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Config.cmake.in  FindBotan.cmake  FindSodium.cmake  Findlibcbor.cmake
cmake/cmake_integration_test/: CMakeLists.txt  README.md  test_cardano_cmake.cpp
docs/: poxy.toml
docs/pages/: cardano_concepts.md  concept_encodings.md  concept_stake_pool_keys_and_certs.md  concept_tss_implementation.md  concept_wallets.md  concepts.md  example_direct_key_splitting_api.md  example_generate_stake_pool_keys.md  example_shamir_secret_sharing_api.md  examples.md  main_page.md
examples/: CMakeLists.txt
examples/generate_stake_pool_keys/: CMakeLists.txt  README.md  main.cpp
include/cardano/: address.hpp  bip32_ed25519.hpp  bip39_dictionary.hpp  cardano.hpp  crypto.hpp  curve25519.hpp  ed25519.hpp  encodings.hpp  genesis.hpp  kes.hpp  ledger.hpp  mnemonic.hpp  secmem.hpp  serialization.hpp  stake_pool.hpp  transaction.hpp  tss.hpp  util.hpp  vrf.hpp
libs/: CMakeLists.txt
scripts/: Dockerfile.base  build-docker-base.sh  build-docker.sh
src/: address.cpp  bip32_ed25519.cpp  cardano_crypto_interface.c  cardano_crypto_interface.h  crypto.cpp  curve25519.cpp  debug_utils.cpp  debug_utils.hpp  ed25519.cpp  encodings.cpp  kes.cpp  ledger.cpp  mnemonic.cpp  stake_pool.cpp  transaction.cpp  tss.cpp  util.cpp  utils.cpp  utils.hpp  vrf.cpp
src/alonzo/: genesis.cpp
src/babbage/: ledger.cpp  transaction.cpp
src/byron/: genesis.cpp
src/conway/: genesis.cpp
src/shelley/: genesis.cpp  ledger.cpp  transaction.cpp
test/: CMakeLists.txt  test_cardano_address.cpp  test_cardano_address_api.cpp  test_cardano_bip32_ed25519_api.cpp  test_cardano_byron_address.cpp  test_cardano_cbor_encodings.cpp  test_cardano_crypto.cpp  test_cardano_curve25519_api.cpp  test_cardano_ed25519_api.cpp  test_cardano_encoding_apis.cpp  test_cardano_encodings.cpp  test_cardano_genesis_api.cpp  test_cardano_kes_api.cpp  test_cardano_kes_integration.cpp  test_cardano_mnemonic.cpp  test_cardano_mnemonic_api.cpp  test_cardano_mnemonic_to_address.cpp  test_cardano_mnemonic_to_stake_address.cpp  test_cardano_secmem_api.cpp  test_cardano_shelley_transaction_api.cpp  test_cardano_stake_pool.cpp  test_cardano_stake_pool_api.cpp  test_cardano_transaction.cpp  test_cardano_transaction_api.cpp  test_cardano_transaction_build.cpp  test_cardano_transaction_sign.cpp  test_cardano_tss_api_direct.cpp  test_cardano_tss_api_sss.cpp  test_cardano_util_api.cpp  test_cardano_vrf_api.cpp  test_utils.hpp  tests.hpp
test/data/kes/: README.txt
